--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "test05",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "webpack-dev-server --hot"
+    "dev": "webpack --mode development",
+    "start": "webpack-dev-server --hot"
   },
   "author": "me",
   "license": "ISC",
@@ -13,8 +14,13 @@
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
+  },
+  "dependencies": {
+    "@babel/preset-typescript": "^7.15.0"
   }
 }
