--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test05",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "./index.ts",
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --hot"
@@ -12,15 +12,20 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@vue/compiler-sfc": "^3.2.20",
     "babel-loader": "^8.2.3",
+    "eslint": "^8.1.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
-    "webpack": "^5.60.0",
+    "vue-loader": "^15.9.8",
+    "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.15.0"
+    "vue": "^3.2.20",
+    "vue-template-compiler": "2.6.14"
   }
 }
